# opengl_experiments

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindGLEW.cmake  FindGLM.cmake
experiments/camera/: CMakeLists.txt  main.cpp
experiments/lighting/: CMakeLists.txt  main.cpp
experiments/modelloading/: CMakeLists.txt  main.cpp
helpers/: Camera.h  Shader.h  Texture.h
shaders/: lighting.frag  lighting.vert  texture.vert
